--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
   "framework": null,
   "buildCommand": "npm run build",
   "outputDirectory": "frontend/dist",
-  "installCommand": "npm run install:all"
+  "installCommand": "npm install && cd frontend && npm install"
 }
